# loop-kit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROMPT.md  README.md  Tiltfile  llms.txt  loopkit.toml  pyproject.toml
.github/workflows/: deploy-cloud.yml  loopkit.yml  tests.yml  worker-image.yml
docs/: AI-PRIMER.md  BILLING.md  CONTROL-FILES.md  OPERATING.md  README.md  TROUBLESHOOTING.md  USING-ON-YOUR-REPO.md  default-judge-design.md  doc-redesign.md  mold-parallel-design.md  part-ii-resume.md  part-iii-agent-isolation.md  part-iii-ci-mode.md  part-iii-ecosystem.md  part-iii-prior-art.md  part-iii-resume.md  part-iii-security-review.md  part-iii-skills-repo.md  part-iv-molding-kit.md  part-iv-resume.md  tilt-fleet-plan.md
docs/architecture/: 01-system-today.md  02-cloud-architecture.md  03-adapters-and-auth.md  04-security.md  README.md
docs/archive/: README.md  part-ii-tilt-fleet-plan.md
examples/: README.md
examples/ci/: README.md  github-actions-claude-code.yml  github-actions.yml  gitlab-ci-claude-code.yml  gitlab-ci.yml
examples/demo-repo/: CLAUDE.md  PROMPT.md  loopkit.toml  pricing.py  pytest.ini
examples/demo-repo/tests/holdout/: test_pricing_holdout.py
examples/evolve/: README.md  score.sh
examples/gates/: README.md  docs-gate.sh  has-tests.sh  llm-judge.sh  loopkit.example.toml  mechanical.sh  review.sh  rubric.md  validate.sh
examples/molding/: README.md  SKILL.md  coverage-tiers.md
examples/molding/templates/: acceptance-dispatcher.sh  acceptance-oracle.sh  acceptance-probe.sh  issue.loopkit.toml  judge-rubric.md  proposer.sh  worktree.sh
examples/skills/: README.md  distill.sh
examples/walkthrough/: README.md
k8s/: redis.yaml  worker.yaml
k8s/cloud/: 00-namespace.yaml  10-redis.yaml  20-rbac.yaml  30-networkpolicy.yaml
k8s/cloud/ops/: deployment.yaml  secret.example.yaml
k8s/cloud/webhook/: deployment.yaml  secret.example.yaml  service.yaml
loopkit/: __init__.py  _templates.py  agent.py  cli.py  config.py  durability.py  executor.py  gate.py  log.py  loop.py  plan.py  pricing.py  prompt.py  safety.py  secrets.py  stops.py  trace.py
loopkit/cli/: __init__.py  __main__.py  _support.py  batch.py  cloud.py  fleet.py  local.py  mold.py
loopkit/extensions/: __init__.py  batch.py  cloud.py  cloudrun.py  creds.py  detect.py  fleet.py  issues.py  judge.py  measure.py  mold.py  orchestrate.py  overlap.py  remote.py  review.py  route.py  skills.py  synth_gate.py  triggers.py
loopkit/scenarios/: README.md  __init__.py  ch05_context.py  ch07_feedback.py  ch08_review.py  ch09_held_out.py  ch10_orchestration.py  ch11_evolution.py  ch12_fleet.py  ch13_hard_stops.py  ch14_economics.py  ch16_safety.py  ch17_skills.py  ch20_triggers.py  ch21_ci.py  ch22_isolation.py  ch23_skills_repo.py  ch24_reliability.py  ch25_synth_gate.py  ch26_detect.py  ch27_route.py  ch28_batch.py  ch29_mold.py
tests/: conftest.py  test_aci_gates.py  test_adapters.py  test_batch.py  test_ci.py  test_cli_surface.py  test_cloud.py  test_cloudrun.py  test_creds.py  test_demo_repo.py  test_detect.py  test_doctor.py  test_evolve.py  test_executor.py  test_fleet.py  test_gate_stability.py  test_hygiene.py  test_judge.py  test_loop.py  test_measure.py  test_mold.py  test_orchestrate.py  test_overlap.py  test_plan.py  test_prompt.py  test_remote_issues.py  test_review.py  test_route.py  test_scenarios.py  test_secrets.py  test_security_hardening.py  test_skills.py  test_skills_repo.py  test_synth_gate.py  test_tracing.py  test_triggers.py
(+1 files in other folders)
