[project]
name = "loopkit"
version = "0.1.0"
description = "A self-governed coding loop you can point at any repo — the agentic-loops course, made runnable."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
loopkit = "loopkit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loopkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
