[project]
name = "loopkit"
version = "0.1.0"
description = "A self-governed coding loop you can point at any repo — the agentic-loops course, made runnable."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
]

# The core stays thin (typer + rich + pydantic). Everything heavy is an optional extra, so
# `pip install loopkit` never pulls a provider SDK, a Redis client, or a trace backend — each is
# imported lazily behind its extra. The worker image installs the extras it needs; tests use the
# `dev` extra (fakeredis, no server) and inject fakes for the SDKs/trace (no real keys).
#   [claude]/[openai] — the API adapters' SDKs (Ch 1-3 / Ch 14)
#   [trace]           — LangSmith full-tree tracing (Ch 14-15 observability)
#   [fleet]           — the queue-driven fleet's Redis client (Ch 12)
[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
trace = ["langsmith>=0.1"]
fleet = ["redis>=5.0"]
agents = ["anthropic>=0.40", "openai>=1.40"]          # both API adapters at once
all = ["anthropic>=0.40", "openai>=1.40", "langsmith>=0.1", "redis>=5.0"]
# truststore is a LOCAL-DEV-ONLY dep: it routes TLS through the OS trust store so the LangSmith
# uploader (and the SDKs) work behind a corp TLS-intercepting proxy (Zscaler — corp root CA in the
# keychain, not in Python's bundled CAs). NEVER ship it to prod: prod talks to LangSmith over
# normal TLS with standard CAs. trace.py injects truststore only if it's importable, so it
# self-activates in dev and is a clean no-op in prod (where it isn't installed).
dev = ["pytest>=8.0", "fakeredis>=2.21", "truststore>=0.9"]

[project.scripts]
loopkit = "loopkit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loopkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
